@@ -1,3 +1,7 @@
+2003-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-display-width): Move forward (see the comment).
+
 2003-11-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-w3m-parse-header): Because a broken server returns a
